java_tls: add generic SSLEngine hook (engine mode) for any JVM TLS app
The default "kafka" mode instruments only
org.apache.kafka.common.network.SslTransportLayer, which conveniently holds
BOTH the SSLEngine (plaintext) and the SocketChannel (the OS fd). That precise
pairing is what made it the proven, safe path.

A truly generic hook (any JSSE user: Netty, gRPC-netty, plain NIO) is harder for
exactly one reason: a bare javax.net.ssl.SSLEngine has NO socket reference, so
wrap()/unwrap() give you plaintext but no fd to key the connection on. This is
the whole "big and risky" part — not the byte capture.

The simple, clear, safe resolution implemented here:

  * Hook sun.security.ssl.SSLEngineImpl.wrap/unwrap for the plaintext (read the
    app buffers' consumed/produced delta on method exit — no copies of ciphertext,
    no JCE internals).
  * Recover the fd from a thread-local (EngineContext) that
    sun.nio.ch.SocketChannelImpl.read/write sets on the same thread. In the NIO
    event-loop model the engine op and the socket op run back-to-back on one
    thread, so "last fd this thread touched" is the right connection. If no fd is
    known yet, we simply skip — never guess.
  * Dedup against the Kafka transport hook via EngineContext.inTransport so
    "both" mode never double-captures.

Safety properties:
  * Opt-in: default stays kafka mode; engine mode only via -Dpixie.jsse.mode.
  * Touches java.base only in engine mode (needs bootstrap-classloader injection
    + redefineModule opens), so the default path never perturbs JDK internals.
  * EngineContext and its members are public on purpose: ByteBuddy inlines advice
    into classes in OTHER packages (org.apache.kafka..., sun.security.ssl...,
    sun.nio.ch...), and those inlined references can only reach public members.
    A package-private helper here throws IllegalAccessError from the woven class
    and breaks every read/write.
  * All capture is wrapped in try/catch and an IN_CAPTURE re-entrancy guard: a